--- a/index.html
+++ b/index.html
@@ -10,22 +10,26 @@
   <p>Являясь всего лишь частью общей картины, интерактивные прототипы, которые представляют собой яркий пример европейского типа политической и социальной культуры.</p>
   <h2></h2>
   <ul>
-    <li>Fig. 1 (plant)
+    <li>
+        <h3>Fig. 1 (plant)</h3>
         <p>Имеется спорная точка зрения, гласящая примерно следующее: активно развивающиеся страны третьего мира своевременно верифицированы.</p>
     </li>
-    <li>Fig. 2 (flower)
+    <li>
+        <h3>Fig. 2 (flower)</h3>
         <p>Прежде всего, синтетическое тестирование влечет за собой процесс внедрения и модернизации условий.</p>
     </li>
-    <li>Fig. 3 (leaf)
+    <li>
+        <h3>Fig. 3 (leaf)</h3>
         <p>Лишь непосредственные участники прогресса неоднозначны и будут в равной степени предоставлены сами себе для работы.</p>
     </li>
-    <li>Fig. 4 (wood)
+    <li>
+        <h3>Fig. 4 (wood)</h3>
         <p>Базовый вектор развития не даёт нам иного выбора, кроме определения новых предложений.</p>
     </li>
   </ul>
   <h2>Новые артефакты</h2>
   <h3>Kurische Nehrung 24</h3>
-    <p>Вот вам яркий пример современных тенденций - начало повседневной работы по формированию позиции выявляет срочную потребность методов управления процессами.</p>
-    <p>Есть над чем задуматься: представители современных социальных резервов своевременно верифицированы.</p>
+  <p>Вот вам яркий пример современных тенденций - начало повседневной работы по формированию позиции выявляет срочную потребность методов управления процессами.</p>
+  <p>Есть над чем задуматься: представители современных социальных резервов своевременно верифицированы.</p>
 </body>
 </html>
