--- a/price.html
+++ b/price.html
@@ -3,24 +3,47 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/styles.css" />
+    <title>Prices</title>
   </head>
   <body>
-    <table>
-      <tr>
-        <td>Букет 1</td>
-        <td>Букет 2</td>
-        <td>Букет 3</td>
-        <td>Букет 4</td>
-        <td>Букет 5</td>
-      </tr>
-      <tr>
-        <td>120 BYN</td>
-        <td>150 BYN</td>
-        <td>200 BYN</td>
-        <td>300 BYN</td>
-        <td>435 BYN</td>
-      </tr>
-    </table>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Галерея</a></li>
+          <li><a href="#">О лаборатории</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+      <button></button>
+    </header>
+    <main>
+      <table>
+        <tr>
+          <td>Букет 1</td>
+          <td>Букет 2</td>
+          <td>Букет 3</td>
+          <td>Букет 4</td>
+          <td>Букет 5</td>
+        </tr>
+        <tr>
+          <td>120 BYN</td>
+          <td>150 BYN</td>
+          <td>200 BYN</td>
+          <td>300 BYN</td>
+          <td>435 BYN</td>
+        </tr>
+      </table>
+    </main>
+    <footer>
+      <ul>
+        <li><a href="#">Youtube</a></li>
+        <li><a href="#">Instagram</a></li>
+        <li><a href="#">Facebook</a></li>
+        <li><a href="#">X</a></li>
+      </ul>
+      <p>f&b ® 2020</p>
+    </footer>
   </body>
 </html>
