--- a/index.html
+++ b/index.html
@@ -26,7 +26,22 @@
             <li><a class="nav-link" href="#">Контакты</a></li>
           </ul>
         </nav>
-        <button></button>
+        <button>
+          <img
+            src="/img/icons/search.svg"
+            alt="search icon"
+            width="24"
+            height="24"
+          />
+        </button>
+        <button>
+          <img
+            src="/img/icons/log-in.svg"
+            alt="log in icon"
+            width="24"
+            height="24"
+          />
+        </button>
       </div>
     </header>
     <main>
@@ -46,8 +61,8 @@
       <section class="item-section">
         <div class="container">
           <h2></h2>
-          <ul>
-            <li>
+          <ul class="item-section-list">
+            <li class="item-section-item">
               <img
                 class="item-photo"
                 src="/img/pictures/section2/plant.png"
@@ -63,7 +78,7 @@
               </p>
               <a class="item-button" href="#">Подробнее</a>
             </li>
-            <li>
+            <li class="item-section-item">
               <img
                 class="item-photo"
                 src="/img/pictures/section2/fl.png"
@@ -78,7 +93,7 @@
               </p>
               <a class="item-button" href="#">Подробнее</a>
             </li>
-            <li>
+            <li class="item-section-item">
               <img
                 class="item-photo"
                 src="/img/pictures/section2/leaf.png"
@@ -93,7 +108,7 @@
               </p>
               <a class="item-button" href="#">Подробнее</a>
             </li>
-            <li>
+            <li class="item-section-item">
               <img
                 class="item-photo"
                 src="/img/pictures/section2/wood.png"
@@ -114,20 +129,26 @@
       <section class="artefact-section">
         <div class="container">
           <h2 class="section-title font-alt">Новые артефакты</h2>
-          <img
-            src="/img/pictures/section-3.jpg"
-            width="1110px"
-            height="571px"
-          />
-          <h3 class="item-heading font-alt">Kurische Nehrung 24</h3>
-          <p class="artefact-desc">
-            Вот вам яркий пример современных тенденций - начало повседневной
-            работы по формированию позиции выявляет срочную потребность методов
-            управления процессами. <br />
-            Есть над чем задуматься: представители современных социальных
-            резервов своевременно верифицированы.
-          </p>
-          <a class="explore-link" href="#">Читать далее</a>
+          <div class="artefact-promo">
+            <div>
+              <img
+                src="/img/pictures/section-3.jpg"
+                width="1110px"
+                height="571px"
+              />
+            </div>
+            <div>
+              <h3 class="item-heading font-alt">Kurische Nehrung 24</h3>
+              <p class="artefact-desc">
+                Вот вам яркий пример современных тенденций - начало повседневной
+                работы по формированию позиции выявляет срочную потребность
+                методов управления процессами. <br />
+                Есть над чем задуматься: представители современных социальных
+                резервов своевременно верифицированы.
+              </p>
+              <a class="explore-link" href="#">Читать далее</a>
+            </div>
+          </div>
         </div>
       </section>
       <section class="cite-section">
